--- a/SCUGridSim/config/consumer.properties
+++ b/SCUGridSim/config/consumer.properties
@@ -1,8 +1,8 @@
 
-number_of_cycles = 1000
+number_of_cycles = 10
 wait_between_cycles = 20
 debug = false
-export_arff_to = weka/10K-
+export_arff_to = weka/
 
 service_generator_config = config/service-generator.json
 task_generator_config = config/task-generator.json
