Add reliability analysis. Fixes some UIs.

--- a/salam/salam-simulation/config/composer.properties
+++ b/salam/salam-simulation/config/composer.properties
@@ -1,7 +1,8 @@
 
 reliability_trace_file_prefix = traces/reliability/
 
-algorithm = FairDistribution
+#algorithm = FairDistribution
+algorithm = PriorityDistribution
 
 #algorithm = EarliestResponse
 #trace_file_prefix = traces/earliest_response/
