--- a/hcu/hcu-cloud-manager/pom.xml
+++ b/hcu/hcu-cloud-manager/pom.xml
@@ -12,5 +12,10 @@
   		<artifactId>hcu-common</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>at.ac.tuwien.dsg.hcu</groupId>
+  		<artifactId>hcu-monitor</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 </project>
