--- a/hcu/hcu-simulation/pom.xml
+++ b/hcu/hcu-simulation/pom.xml
@@ -27,5 +27,10 @@
   		<artifactId>hcu-composer</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+  	<dependency>
+  		<groupId>at.ac.tuwien.dsg.hcu</groupId>
+  		<artifactId>hcu-monitor</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 </project>
