--- a/hcu/pom.xml
+++ b/hcu/pom.xml
@@ -11,6 +11,7 @@
   	<module>hcu-composer</module>
   	<module>hcu-rest</module>
   	<module>hcu-simulation</module>
+  	<module>hcu-monitor</module>
   </modules>
   <properties>
     <maven.compiler.source>1.7</maven.compiler.source>
