Refactor tracer, refactor simulation scenarios

--- a/hcu/hcu-simulation/config/consumer.properties
+++ b/hcu/hcu-simulation/config/consumer.properties
@@ -1,10 +1,9 @@
 
-#number_of_cycles = 334
-number_of_cycles = 1
-wait_between_cycles = 1
-debug = false
-#export_arff_to = weka/
+#scenario_config = scenarios/reliability-analysis/infrastucture-sensing-basic-r-over-k/scenario.json
+scenario_config = scenarios/monitoring/infrastructure-sensing-and-analysis/scenario.json
 
-service_generator_config = config/surveyor-generator.json,config/citizen-generator.json,config/sensor-generator.json
-task_generator_config = config/machine-sensing-task-generator.json,config/human-sensing-task-generator.json,config/mixed-sensing-task-generator.json
 composer_config = config/composer.properties
+tracer_config = config/tracer.json
+
+gridsim_debug = false
+#export_arff_to = weka/
