--- a/hcu/hcu-common/pom.xml
+++ b/hcu/hcu-common/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>at.ac.tuwien.dsg.hcu</groupId>
@@ -8,29 +9,34 @@
   <artifactId>hcu-common</artifactId>
   <dependencies>
     <dependency>
-        <groupId>at.ac.tuwien.dsg.hcu</groupId>
-        <artifactId>hcu-external-lib</artifactId>
-        <version>${project.version}</version>
+      <groupId>at.ac.tuwien.dsg.hcu</groupId>
+      <artifactId>hcu-external-lib</artifactId>
+      <version>${project.version}</version>
     </dependency>
-  	<dependency>
-  		<groupId>org.apache.commons</groupId>
-  		<artifactId>commons-math3</artifactId>
-  		<version>3.2</version>
-  	</dependency>
-  	<dependency>
-		<groupId>jgraph</groupId>
-		<artifactId>jgraph</artifactId>
-		<version>5.8.3.1</version>
-	</dependency>  	
-	<dependency>
-		<groupId>org.jgrapht</groupId>
-		<artifactId>jgrapht-jdk1.5</artifactId>
-		<version>0.7.3</version>
-	</dependency>
-	<dependency>
-		<groupId>org.xerial</groupId>
-		<artifactId>sqlite-jdbc</artifactId>
-		<version>3.7.2</version>
-	</dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.2</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.10</version>
+    </dependency>
+    <dependency>
+      <groupId>jgraph</groupId>
+      <artifactId>jgraph</artifactId>
+      <version>5.8.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jgrapht</groupId>
+      <artifactId>jgrapht-jdk1.5</artifactId>
+      <version>0.7.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.7.2</version>
+    </dependency>
   </dependencies>
 </project>
