--- a/hcu/hcu-cloud-manager/pom.xml
+++ b/hcu/hcu-cloud-manager/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>at.ac.tuwien.dsg.hcu</groupId>
@@ -7,15 +8,21 @@
   </parent>
   <artifactId>hcu-cloud-manager</artifactId>
   <dependencies>
-  	<dependency>
-  		<groupId>at.ac.tuwien.dsg.hcu</groupId>
-  		<artifactId>hcu-common</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>at.ac.tuwien.dsg.hcu</groupId>
-  		<artifactId>hcu-monitor</artifactId>
-  		<version>0.0.1-SNAPSHOT</version>
-  	</dependency>
+    <dependency>
+      <groupId>at.ac.tuwien.dsg.hcu</groupId>
+      <artifactId>hcu-common</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>at.ac.tuwien.dsg.hcu</groupId>
+      <artifactId>hcu-monitor</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>at.ac.tuwien.mela</groupId>
+      <artifactId>MELA-Common</artifactId>
+      <version>3.0-SNAPSHOT</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 </project>
