Changes for simulation UI

--- a/hcu/hcu-rest/config/rest.properties
+++ b/hcu/hcu-rest/config/rest.properties
@@ -4,9 +4,9 @@ REST_CONTEXT_PATH = rest
 SWAGGER_CONTEXT_PATH = rest-ui
 WEBUI_CONTEXT_PATH = web-ui
 
-task_generator_rule = config/task-generator-rule.json
-composer_config = config/composer.properties
+task_generator_rule = /Users/karaoglan/IdeaProjects/RAHYMS/hcu/hcu-rest/config/task-generator-rule.json
+composer_config = /Users/karaoglan/IdeaProjects/RAHYMS/hcu/hcu-rest/config/composer.properties
 
 populate_peers = true
-populate_peers_gmail_prefix = mzuhri
+populate_peers_gmail_prefix = burakkaraoglan55
 populate_peers_rest_url = http://localhost:8081/peer
