--- a/hcu/hcu-composer/pom.xml
+++ b/hcu/hcu-composer/pom.xml
@@ -22,5 +22,10 @@
 		<artifactId>hcu-cloud-manager</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</dependency>
+	  <dependency>
+		  <groupId>org.mongodb</groupId>
+		  <artifactId>mongo-java-driver</artifactId>
+		  <version>2.12.2</version>
+	  </dependency>
   </dependencies>
 </project>
