--- a/hcu/hcu-rest/pom.xml
+++ b/hcu/hcu-rest/pom.xml
@@ -92,6 +92,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>at.ac.tuwien.dsg.hcu</groupId>
+			<artifactId>hcu-simulation</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>at.ac.tuwien.dsg</groupId>
 			<artifactId>smartcom-impl</artifactId>
 			<version>1.0-SNAPSHOT</version>
