--- a/hcu/hcu-simulation/config/composer.properties
+++ b/hcu/hcu-simulation/config/composer.properties
@@ -1,8 +1,9 @@
 
-reliability_trace_file_prefix = traces/reliability/
+#reliability_trace_file_prefix = traces/reliability/
 
 #algorithm = FairDistribution
 algorithm = PriorityDistribution
+trace_file_prefix = /Users/karaoglan/IdeaProjects/RAHYMS/hcu/hcu-simulation/traces/
 
 #algorithm = EarliestResponse
 #trace_file_prefix = traces/earliest_response/
