--- a/hcu/hcu-simulation/pom.xml
+++ b/hcu/hcu-simulation/pom.xml
@@ -27,5 +27,10 @@
   		<artifactId>hcu-composer</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+      <dependency>
+          <groupId>org.mongodb</groupId>
+          <artifactId>mongo-java-driver</artifactId>
+          <version>2.12.2</version>
+      </dependency>
   </dependencies>
 </project>
