--- a/hcu/hcu-rest/pom.xml
+++ b/hcu/hcu-rest/pom.xml
@@ -111,6 +111,11 @@
 			<artifactId>hcu-composer</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>
 	</dependencies>
 
 	<build>
