Fixes after merging

--- a/hcu/hcu-simulation/config/consumer.properties
+++ b/hcu/hcu-simulation/config/consumer.properties
@@ -4,7 +4,8 @@
 #scenario_config = scenarios/reliability-analysis/infrastucture-sensing-r-on-different-composition-algorithms/scenario.json
 scenario_config = scenarios/monitoring/infrastructure-sensing-and-analysis/scenario.json
 
-composer_config = /Users/karaoglan/IdeaProjects/RAHYMS/hcu/hcu-simulation/config/composer.properties
+#composer_config = /Users/karaoglan/IdeaProjects/RAHYMS/hcu/hcu-simulation/config/composer.properties
+composer_config = config/composer.properties
 tracer_config = config/tracer.json
 
 # set monitor to true to enable monitor event processing, this may slow down simulation
