--- a/hcu/hcu-rest/pom.xml
+++ b/hcu/hcu-rest/pom.xml
@@ -116,6 +116,11 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.9</version>
+        </dependency>
 	</dependencies>
 
 	<build>
