- Allow custom implementation classes. - Add negotiation interface.

--- a/hcu/hcu-rest/config/rest.properties
+++ b/hcu/hcu-rest/config/rest.properties
@@ -10,3 +10,9 @@ composer_config = config/composer.properties
 populate_peers = true
 populate_peers_gmail_prefix = mzuhri
 populate_peers_rest_url = http://localhost:8081/peer
+
+# implementation classes
+service_manager = at.ac.tuwien.dsg.hcu.cloud.manager.ServiceManagerOnMemory
+discoverer = at.ac.tuwien.dsg.hcu.cloud.discoverer.Discoverer
+composer = at.ac.tuwien.dsg.hcu.composer.Composer
+negotiator = at.ac.tuwien.dsg.hcu.cloud.negotiator.SimpleNegotiator
