Adding hcu-rest-client.
Also:
- Fixed: DependencyProcessor should handle non-existent earliest_availability metric
- Refactored: Renaming CloudUserInterface to WorkerManagerInterface

--- a/hcu/hcu-simulation/pom.xml
+++ b/hcu/hcu-simulation/pom.xml
@@ -32,5 +32,10 @@
   		<artifactId>hcu-monitor</artifactId>
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
+    <dependency>
+        <groupId>at.ac.tuwien.dsg.hcu</groupId>
+        <artifactId>hcu-rest-client</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
