--- a/hcu/hcu-simulation/config/consumer.properties
+++ b/hcu/hcu-simulation/config/consumer.properties
@@ -3,6 +3,7 @@
 #scenario_config = scenarios/reliability-analysis/infrastucture-sensing-r-over-p/scenario.json
 #scenario_config = scenarios/reliability-analysis/infrastucture-sensing-r-on-different-composition-algorithms/scenario.json
 scenario_config = scenarios/monitoring/infrastructure-sensing-and-analysis/scenario.json
+#scenario_config = scenarios/monitoring/infrastructure-sensing-and-analysis/scenario-rest-client.json
 
 composer_config = config/composer.properties
 tracer_config = config/tracer.json
