--- a/hcu/config/simulation-web-composer.properties
+++ b/hcu/config/simulation-web-composer.properties
@@ -1,4 +1,4 @@
-#Sun Jul 24 16:37:50 CEST 2016
+#Fri Aug 26 11:29:51 EEST 2016
 max_pheromone=1
 min_pheromone=1.0E-4
 cost_weight=1
@@ -7,14 +7,14 @@ pheromone_evaporation=0.01
 initial_pheromone=0.001
 cross_summary_limit=10000
 aco_variant=AntSystemAlgorithm
-reliability_trace_file_prefix=hcu-simulation/traces/reliability/
+reliability_trace_file_prefix=traces/reliability/
 objective_multiplier=100
 heuristic_weight=1
 number_of_ants=8
 competency_weight=1
 response_time_weight=1
 algorithm=PriorityDistribution
-trace_file_prefix=hcu-simulation/traces/composer/composer-
+trace_file_prefix=traces/composer/composer-
 q_0=0.5
 stagnant_limit=10000
 pheromone_weight=0.2
